deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello1-deployment
  labels:
    app: hello1-pod
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: hello1-pod
  template:
    metadata:
      labels:
        app: hello1-pod
    spec:
      containers:
      - name: hello1-pod
        args:
        - apache2-foreground
        image: ghcr.io/kulll/hello1:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: hello1-data
          mountPath: /var/www/html/sites
          subPath: sites
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "drush cache:rebuild"]
      volumes:
      - name: hello1-data
        persistentVolumeClaim:
          claimName: hello1-data
      securityContext:
        fsGroup: 33

---
kind: Service
apiVersion: v1
metadata:
  name: hello1-svc
spec:
  selector:
    app: hello1-pod
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello1
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: hello1.192.168.124.237.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello1-svc
                port:
                  number: 80
